tweaked wraps to try and fix menu h1's from disappearing when browser expands

--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,7 @@ table {
 
 #sub-nav {
 	margin: 0 auto;
-	width: 415px;
+	width: 380px;
 }
 
 #sub-nav li {
@@ -178,7 +178,7 @@ table {
 	font-size: 16px;
 	display: inline-block;
 	padding: 40px 0;
-	width: 100px;
+	width: 90px;
 	text-align: center;
 }
 
